Bug 331146 - Log-viewer shows contact ID's but not contact names.
Summary: Log-viewer shows contact ID's but not contact names.
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: log-viewer (other bugs)
Version First Reported In: git-latest
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-15 00:09 UTC by Luis Silva
Modified: 2014-03-15 22:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luis Silva 2014-02-15 00:09:33 UTC
The contact list in the log-viewer shows the contact ID's of the contacts rather than their names. The name of the contact is correctly displayed in the message pane.  Avatars, mine or the contact's are replaced by the blue pawn even if correctly shown in the ktp-contactlist window.

Reproducible: Always




I'm compiling from git master so can test any changes you make at a minute's notice.
Comment 1 Daniel Vrátil 2014-02-17 17:20:09 UTC
Git commit 629cdf97f90cc6538304710d0b9a8994e0fdbc6f by Dan Vrátil.
Committed on 17/02/2014 at 17:18.
Pushed by dvratil into branch 'master'.

Emit modelInitialized() after all AllContactsMonitors finished initial contacts fetch

Each AllContactsMonitor emits initialFetchComplete() signal once it finishes
fetching all contacts after start. When all monitors from all DataSources have
emitted the signal, PersonsModel will emit modelInitialized().

REVIEW: 115833
FIXED-IN: 0.8.0

M  +19   -2    src/allcontactsmonitor.cpp
M  +19   -3    src/allcontactsmonitor.h
M  +22   -6    src/personsmodel.cpp
M  +2    -1    src/personsmodel.h
M  +8    -1    src/plugins/akonadi/akonadidatasource.cpp

http://commits.kde.org/libkpeople/629cdf97f90cc6538304710d0b9a8994e0fdbc6f
Comment 2 Luis Silva 2014-02-17 19:28:24 UTC
Sorry, commit 629cdf97f90cc6538304710d0b9a8994e0fdbc6f does not solve this problem for me.
Comment 3 David Edmundson 2014-02-17 19:36:17 UTC
Dan's patch relies on a cache that is updated by the ktp-kded-module.
Could you make sure this is up-to-date and that you have logged out and back in again.
Comment 4 Luis Silva 2014-02-17 20:27:47 UTC
I just updated all the source trees again and recompiled. Logged out of all IM accounts and restarted kded4. The result is the same. The contact list in the log viewer is not updated with the contact name but the messages in the actual log are correctly labeled.
Comment 5 David Edmundson 2014-03-12 11:26:46 UTC
There was an update last night that may have fixed this.

It's working for me, could you check again please
Comment 6 Luis Silva 2014-03-15 22:10:21 UTC
Hi. It seems that the update you mentioned solved the issue. I recompiled from the latest master and it works. Thanks a lot.