Emit modelInitialized() after all AllContactsMonitors finished initial contacts fetch

Each AllContactsMonitor emits initialFetchComplete() signal once it finishes
fetching all contacts after start. When all monitors from all DataSources have
emitted the signal, PersonsModel will emit modelInitialized().

REVIEW: 115833
BUG: 331146
FIXED-IN: 0.8.0